# Rinn

./: .cursorignore  .cursorrules  .gitignore  .rules  CMakeLists.txt
Docs/: devlog.md  知识清单.md
docs/: PROJECT_MANIFEST.md  progress.md
docs/.obsidian/: workspace.json
docs/context/: context_raylib.txt  context_rllm.txt  context_sol2.txt
scripts/: test.lua
src/: main.cpp
src/Core/: ComponentID.hpp  Registry.hpp
src/Resources/: ResourceManager.hpp
src/Scripting/: ComponentList.hpp  ComponentTraits.hpp  LuaBinder.hpp  ScriptContext.hpp
src/Systems/: RenderSystem.hpp
src/components/: Components.hpp
src/core/: SparseSet.hpp  Types.hpp
